// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";
package io.harness.eventsframework.schemas.entity;

option java_multiple_files = true;
option go_package = "970_ng_commons";

enum EntityTypeProtoEnum {
  PROJECTS = 0;
  PIPELINES = 1;
  CONNECTORS = 2;
  SECRETS = 3;
  SERVICE = 4;
  ENVIRONMENT = 5;
  INPUT_SETS = 6;
  CV_CONFIG = 7;
  DELEGATES = 8;
  DELEGATE_CONFIGURATIONS = 9;
  CV_VERIFICATION_JOB = 10;
  CV_KUBERNETES_ACTIVITY_SOURCE = 11;
  INTEGRATION_STEPS = 12;
  INTEGRATION_STAGE = 13;
  DEPLOYMENT_STAGE = 14;
  DEPLOYMENT_STEPS = 15;
  PIPELINE_STEPS = 16;
  APPROVAL_STAGE = 17;
  TRIGGERS = 18;
  FEATURE_FLAG_STAGE = 19;
  MONITORED_SERVICE = 20;
  TEMPLATE = 21;
  GIT_REPOSITORIES = 22;
  FEATURE_FLAGS = 23;
  HTTP_STEP = 24;
  SHELL_SCRIPT_STEP = 25;
  K8S_CANARY_DEPLOY_STEP = 26;
  JIRA_CREATE_STEP = 27;
  SERVICENOW_APPROVAL_STEP = 28;
  JIRA_UPDATE_STEP = 29;
  JIRA_APPROVAL_STEP = 30;
  HARNESS_APPROVAL_STEP = 31;
  BARRIER_STEP = 32;
  VERIFY_STEP = 33;
  OPAPOLICIES = 34;
  POLICY_STEP = 35;
  ARTIFACTORY_UPLOAD = 36;
  GCS_UPLOAD = 37;
  S3_UPLOAD = 38;
  BUILD_AND_PUSH_GCR = 39;
  BUILD_AND_PUSH_ECR = 40;
  BUILD_AND_PUSH_DOCKER_REGISTRY = 41;
  RUN_STEP = 42;
  RUN_TEST = 43;
  PLUGIN = 44;
  RESTORE_CACHE_GCS = 45;
  RESTORE_CACHE_S3 = 46;
  SAVE_CACHE_GCS = 47;
  SAVE_CACHE_S3 = 48;
  FLAG_CONFIGURATION = 49;
  SECURITY = 50;
  K8S_APPLY_STEP = 51;
  K8S_BLUE_GREEN_DEPLOY_STEP = 52;
  K8S_ROLLING_DEPLOY_STEP = 53;
  K8S_ROLLING_ROLLBACK_STEP = 54;
  K8S_SCALE_STEP = 55;
  K8S_DELETE_STEP = 56;
  K8S_BG_SWAP_SERVICES_STEP = 57;
  K8S_CANARY_DELETE_STEP = 58;
  TERRAFORM_APPLY_STEP = 59;
  TERRAFORM_PLAN_STEP = 60;
  TERRAFORM_DESTROY_STEP = 61;
  TERRAFORM_ROLLBACK_STEP = 62;
  HELM_DEPLOY_STEP = 63;
  HELM_ROLLBACK_STEP = 64;
  SERVICENOW_CREATE_STEP = 65;
  SERVICENOW_UPDATE_STEP = 66;
  ENVIRONMENT_GROUP = 67;
  SECURITY_STAGE = 68;
  SECURITY_STEPS = 69;
  FILES = 70;
  SERVERLESS_AWS_LAMBDA_DEPLOY_STEP = 71;
  SERVERLESS_AWS_LAMBDA_ROLLBACK_STEP = 72;
  CUSTOM_STAGE = 73;
  CLOUDFORMATION_CREATE_STACK_STEP = 74;
  CLOUDFORMATION_DELETE_STACK_STEP = 75;
  CLOUDFORMATION_ROLLBACK_STACK_STEP = 76;
  INFRASTRUCTURE = 77;
  GITOPS_CREATE_PR = 78;
  COMMAND_STEP = 79;
  STRATEGY_NODE = 80;
  AZURE_SLOT_DEPLOYMENT_STEP = 81;
  AZURE_TRAFFIC_SHIFT_STEP = 82;
  AZURE_SWAP_SLOT_STEP = 83;
  AZURE_WEBAPP_ROLLBACK_STEP = 84;
  GITOPS_MERGE_PR = 85;
  QUEUE_STEP = 86;
  CUSTOM_APPROVAL_STEP = 87;
  JENKINS_BUILD = 88;
  TEMPLATE_STAGE = 89;
  EMAIL_STEP = 90;
  BUILD_AND_PUSH_ACR = 91;
  AZURE_CREATE_ARM_RESOURCE_STEP = 92;
  GIT_CLONE = 93;
  AZURE_CREATE_BP_RESOURCE_STEP = 94;
  AZURE_ROLLBACK_ARM_RESOURCE_STEP = 95;
  BACKGROUND_STEP = 96;
  ECS_ROLLING_DEPLOY_STEP = 97;
  ECS_ROLLING_ROLLBACK_STEP = 98;
  ECS_CANARY_DEPLOY_STEP = 99;
  ECS_CANARY_DELETE_STEP = 100;
  TEMPLATE_CUSTOM_DEPLOYMENT = 101;
  WAIT_STEP = 102;
  ARTIFACT_SOURCE_TEMPLATE = 103;
  ECS_BLUE_GREEN_CREATE_SERVICE_STEP = 104;
  ECS_BLUE_GREEN_SWAP_TARGET_GROUPS_STEP = 105;
  ECS_BLUE_GREEN_ROLLBACK_STEP = 106;
  FETCH_INSTANCE_SCRIPT_STEP = 107;
  PIPELINE_STAGE = 108;
  SHELL_SCRIPT_PROVISION_STEP = 109;
  SERVICENOW_IMPORT_SET_STEP = 110;
  GITOPS_UPDATE_RELEASE_REPO = 111;
  FREEZE = 112;
  ECS_RUN_TASK_STEP = 113;
  CHAOS_STEP = 114;
  ELASTIGROUP_DEPLOY_STEP = 115;
  ELASTIGROUP_ROLLBACK_STEP = 116;
  ACTION_STEP = 117;
  AWS_ECR = 118;
  BANDIT = 119;
  BLACKDUCK = 120;
  BRAKEMAN = 121;
  BURP = 122;
  CHECKMARX = 123;
  CLAIR = 124;
  DATA_THEOREM = 125;
  DOCKER_CONTENT_TRUST = 126;
  EXTERNAL = 127;
  FORTIFY_ON_DEMAND = 128;
  GRYPE = 129;
  JFROG_XRAY = 130;
  MEND = 131;
  METASPLOIT = 132;
  NESSUS = 133;
  NEXUS_IQ = 134;
  NIKTO = 135;
  NMAP = 136;
  OPENVAS = 137;
  OWASP = 138;
  PRISMA_CLOUD = 139;
  PROWLER = 140;
  QUALYS = 141;
  REAPSAW = 142;
  SHIFT_LEFT = 143;
  SNIPER = 144;
  SNYK = 145;
  SONARQUBE = 146;
  SYSDIG = 147;
  TENABLE = 148;
  VERACODE = 149;
  ZAP = 150;
  AQUA_TRIVY = 151;
  ELASTIGROUP_SETUP_STEP = 152;
  BITRISE_STEP = 153;
  GITOPS_FETCH_LINKED_APPS = 154;
  TERRAGRUNT_PLAN_STEP = 155;
  TERRAGRUNT_APPLY_STEP = 156;
  TERRAGRUNT_DESTROY_STEP = 157;
  TERRAGRUNT_ROLLBACK_STEP = 158;
  IACM = 159;
  IACM_STAGE = 160;
  IACM_STEPS = 161;
  CONTAINER_STEP = 162;
}
